<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_fic" />

    <EditText
        android:id="@+id/etNombreUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/imgLogo"
        android:hint="@string/et_nombre_usuario"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/etContrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/etNombreUsuario"
        android:hint="@string/et_contrasenia"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnInicioSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etContrasenia"
        android:text="@string/btn_inicio_sesion" />
</RelativeLayout>